@@ -1,10 +1,10 @@
 HOSTS:
-  freebsd-10.2-amd64:
+  freebsd-11.1-amd64:
     roles:
       - agent
       - default
-    platform: freebsd-10.2-amd64
+    platform: freebsd-11.1-amd64
     hypervisor: vagrant
-    box: ptomulik/freebsd-10.2-amd64-ports
+    box: ptomulik/freebsd-11.1-amd64-ports
 CONFIG:
   type: foss
